@@ -4,6 +4,7 @@
 	- Don't allow NULL for rr.minage and use -1 for unknown
 	- Check for editsum = description and give an easier to understand error
 	- RFC-01: Added vnlists feature and removed rlists.vstat option
+	- ULists::votelist: Don't give a 404 on /u+/votes when no votes found
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
